--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,12 @@
 body {
     font-family: 'Inter', sans-serif;
 }
+
+.container {
+    padding: 0rem 1rem;
+}
+
+.container-center{
+    max-width: 600px;
+    margin: auto;
+}
