--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
     font-family: 'Inter', sans-serif;
 }
 
+hr {
+    margin: 1rem 0;
+}
+
 .container {
     padding: 0rem 1rem;
 }
@@ -31,4 +35,13 @@ body {
 .link-secondary {
     border: 1px solid var(--primary-color);
     border-radius: 0.5rem;
+}
+
+.list-non-bullet {
+    list-style: none;
+}
+
+.list-item-inline {
+    display: inline;
+    padding: 0  0.6rem;
 }
