--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,28 @@ hr {
     display: inline;
     padding: 0  0.6rem;
 }
+
+.navigation {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 1rem;
+    border-radius: 0 0 0 1rem;
+}
+
+.navigation .nav-brand {
+    font-weight: bold;
+    font-size: large;
+}
+
+.navigation .nav-pills {
+    text-align: right;
+}
+
+.navigation .link {
+    color: white;
+}
+
+.navigation .link-active {
+    font-weight: bold;
+    text-decoration: underline;
+}
