--- a/styles.css
+++ b/styles.css
@@ -1,93 +1,110 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 
 :root {
-    --primary-color: #536DFE;
-    --hero-heading-color: gray
+  --primary-color: #536dfe;
+  --off-white-color: #f3f4f6;
+  --hero-heading-color: gray;
 }
 
 body {
-    font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 hr {
-    margin: 1rem 0;
+  margin: 1rem 0;
 }
 
 .container {
-    padding: 0rem 1rem;
+  padding: 0rem 1rem;
 }
 
-.container-center{
-    max-width: 600px;
-    margin: auto;
+.container-center {
+  max-width: 600px;
+  margin: auto;
 }
 
 .link {
-    text-decoration: none;
-    padding: 0.5rem 1rem;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
 }
 
 .link-primary {
-    background-color: var(--primary-color);
-    border-radius: 0.5rem;
-    color: white;
+  background-color: var(--primary-color);
+  border-radius: 0.5rem;
+  color: white;
 }
 
 .link-secondary {
-    border: 1px solid var(--primary-color);
-    border-radius: 0.5rem;
+  border: 1px solid var(--primary-color);
+  border-radius: 0.5rem;
 }
 
 .list-non-bullet {
-    list-style: none;
+  list-style: none;
 }
 
 .list-item-inline {
-    display: inline;
-    padding: 0  0.6rem;
+  display: inline;
+  padding: 0 0.6rem;
 }
 
 .navigation {
-    background-color: var(--primary-color);
-    color: white;
-    padding: 1rem;
-    border-radius: 0 0 0 1rem;
+  background-color: var(--primary-color);
+  color: white;
+  padding: 1rem;
+  border-radius: 0 0 0 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navigation .nav-brand {
-    font-weight: bold;
-    font-size: large;
+  font-weight: bold;
+  font-size: large;
 }
 
 .navigation .nav-pills {
-    text-align: right;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .navigation .link {
-    color: white;
+  color: white;
 }
 
 .navigation .link-active {
-    font-weight: bold;
-    text-decoration: underline;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 .hero {
-    padding: 2rem;
+  padding: 2rem;
 }
 
 .hero .hero-img {
-    max-width: 360px;
-    display: block;
-    margin: auto;
+  max-width: 360px;
+  display: block;
+  margin: auto;
 }
 
 .hero .hero-heading {
-    font-size: 2.2rem;
-    color: var(--hero-heading-color);
-    text-align: center;
+  font-size: 2.2rem;
+  color: var(--hero-heading-color);
+  text-align: center;
 }
 
 .hero .hero-inverted {
-    color: var(--primary-color);
+  color: var(--primary-color);
+}
+
+.section {
+  padding: 2rem;
+  text-align: center;
+  max-width: 480px;
+  margin: auto;
+}
+
+.ow {
+  background-color: var(--off-white-color);
+  border-radius: 0.5rem;
 }
