--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 
 body {
   font-family: "Inter", sans-serif;
+  /* margin: 0; */
 }
 
 hr {
@@ -107,4 +108,20 @@ hr {
 .ow {
   background-color: var(--off-white-color);
   border-radius: 0.5rem;
+}
+
+.footer {
+  background-color: var(--primary-color);
+  color: white;
+  padding: 1rem;
+  text-align: center;
+  border-radius: 0 1rem 0 0;
+}
+
+.footer ul {
+  padding-inline-start: 0;
+}
+
+.footer a {
+  color: white;
 }
