--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: "Inter", sans-serif;
-  /* margin: 0; */
+  margin: 0;
 }
 
 hr {
@@ -25,19 +25,21 @@ hr {
 }
 
 .link {
+  display: inline-block;
   text-decoration: none;
   padding: 0.5rem 1rem;
 }
 
 .link-primary {
   background-color: var(--primary-color);
-  border-radius: 0.5rem;
+  border-radius: 1rem;
   color: white;
 }
 
 .link-secondary {
   border: 1px solid var(--primary-color);
-  border-radius: 0.5rem;
+  border-radius: 1rem;
+  color: var(--primary-color);
 }
 
 .list-non-bullet {
@@ -101,7 +103,7 @@ hr {
 .section {
   padding: 2rem;
   text-align: center;
-  max-width: 480px;
+  max-width: 1080px;
   margin: auto;
 }
 
@@ -116,6 +118,11 @@ hr {
   padding: 1rem;
   text-align: center;
   border-radius: 0 1rem 0 0;
+  margin-top: 2rem;
+}
+
+.footer small {
+  font-weight: bold;
 }
 
 .footer ul {
@@ -124,4 +131,10 @@ hr {
 
 .footer a {
   color: white;
+}
+
+.blog {
+  max-width: 1080px;
+  margin: auto;
+  text-align: justify;
 }
